# coin-trend-analyzer

./: .env.example  .gitignore  .pre-commit-config.yaml  LAUNCHD_GUIDE.md  README.md  README_EN.md  ai_analyzer.py  coin_data.py  email_sender.py  launchd_setup.sh  main.py  news_fetcher.py  pyproject.toml  report_generator.py  requirements.txt  知乎文章_macOS合盖定时任务.md
